@@ -13,6 +13,8 @@ Revision history for Perl extension PPI
 	  strings (GitHub #76) (MOREGAN)
 	- Prevent sub names like 'v10' from being parsed as version
 	  strings (RT #74527, GitHub #65) (JAE, MOREGAN)
+	- Prevent 'use' and 'no' package names from being parsed as
+	  operators (MOREGAN)
 
 1.220 Tue 11 Nov 2014
 	Summary:
